--- a/style.sass
+++ b/style.sass
@@ -22,12 +22,14 @@
     & > .correct
       box-shadow: inset 0 0 0 2px #8ff0a4
       background-color: #26a269
+
       &:hover
         box-shadow: inset 0 0 0 2px #8ff0a4
 
     & > .incorrect
       box-shadow: inset 0 0 0 2px #ff7b63
       background-color: #c01c28
+
       &:hover
         box-shadow: inset 0 0 0 2px #ff7b63
 
@@ -37,3 +39,6 @@
 
   &.incorrect
     color: #c01c28
+
+.endButton
+  max-width: 0.5rem
