--- a/style.sass
+++ b/style.sass
@@ -19,6 +19,11 @@
       box-shadow: inset 0 0 0 2px #78aeed
 
   &.answered
+    & > button
+      color: #c7c7c7
+      &:hover
+        box-shadow: none
+
     & > .correct
       box-shadow: inset 0 0 0 2px #8ff0a4
       background-color: #26a269
